fix: remove top margin on small devices

--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,5 +1,4 @@
 .Navigation {
-  padding-top: 15px;
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
@@ -12,5 +11,8 @@
 @media only screen and (min-width : 576px) {
   .Navbar {
     border-radius: 10px;
+  }
+  .Navigation {
+    padding-top: 15px;
   }
 }
